--- a/ProcessadorAOC.qsf
+++ b/ProcessadorAOC.qsf
@@ -69,9 +69,9 @@ set_location_assignment PIN_AD27 -to Switches[3]
 set_location_assignment PIN_AC27 -to Switches[2]
 set_location_assignment PIN_AC28 -to Switches[1]
 set_location_assignment PIN_AB28 -to Switches[0]
-set_location_assignment PIN_M23 -to Swap
-set_location_assignment PIN_M21 -to Set
-set_location_assignment PIN_N21 -to Reset
+set_location_assignment PIN_M21 -to Swap
+set_location_assignment PIN_N21 -to Set
+set_location_assignment PIN_R24 -to Reset
 set_location_assignment PIN_AG14 -to Clock50M
 set_location_assignment PIN_G18 -to Display1[6]
 set_location_assignment PIN_F22 -to Display1[5]
@@ -178,6 +178,6 @@ set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform11.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE output_files/Waveform.vwf
 set_global_assignment -name VECTOR_WAVEFORM_FILE Waveform12.vwf
 set_global_assignment -name TIMING_ANALYZER_MULTICORNER_ANALYSIS ON
-set_global_assignment -name SMART_RECOMPILE OFF
-set_global_assignment -name PHYSICAL_SYNTHESIS_EFFORT NORMAL
+set_global_assignment -name SMART_RECOMPILE ON
+set_global_assignment -name PHYSICAL_SYNTHESIS_EFFORT EXTRA
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
